@@ -852,26 +852,26 @@ REPLACE INTO `mob_db` VALUES (1765,'G_RANDGRIS','Valkyrie','Valkyrie',99,1567200
 REPLACE INTO `mob_db` VALUES (1766,'EM_ANGELING','Angeling','Angeling',99,128430,0,0,0,1,60,71,40,50,1,17,80,80,126,20,10,12,0,8,66,0x4B5,300,1288,288,384,0,0,909,5000,909,5000,741,5000,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1767,'EM_DEVILING','Deviling','Deviling',99,128430,0,0,0,1,60,71,40,50,1,17,80,80,126,20,10,12,0,8,66,0x4B5,300,1288,288,384,0,0,909,5000,909,5000,741,5000,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 # // Rachel / Ice Dungeon monsters (Poring Stats)
-REPLACE INTO `mob_db` VALUES (1768,'GLOOMUNDERNIGHT','Gloom Under Night','Gloom Under Night',89,2298000,0,962175,276445,3,5880,9516,10,20,100,115,98,78,111,50,10,12,2,0,68,0xA5,200,1344,2880,576,481087,10000,607,5500,617,5000,617,5000,7566,7000,7023,4000,7022,2000,616,5000,2513,1000,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1769,'AGAV','Agav','Agav',73,29620,0,9780,6622,1,103,1109,15,35,1,32,27,132,69,15,10,12,1,7,80,0x85,300,768,360,360,0,0,0,0,0,0,0,0,7567,2500,2422,2,7563,4000,2109,1,12183,50,7563,100,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1770,'ECHIO','Echio','Echio',69,34900,0,13560,4300,1,750,1800,33,11,74,74,52,35,59,56,10,12,1,7,80,0x85,250,768,360,360,0,0,0,0,0,0,0,0,7567,2500,608,10,7563,4000,5172,50,12183,20,7563,100,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1771,'VANBERK','Vanberk','Vanberk',59,9988,0,4203,901,1,230,660,24,6,69,66,39,29,51,41,10,12,1,7,80,0x85,250,768,360,360,0,0,0,0,0,0,0,0,7568,2500,526,10,7563,1000,5172,10,0,0,7563,100,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1772,'ISILLA','Isilla','Isilla',62,8297,0,3001,3001,1,89,733,11,19,1,28,12,97,57,12,10,12,1,7,80,0x85,300,768,360,432,0,0,0,0,0,0,0,0,7568,2500,2422,1,7563,1000,2610,10,2601,1,7563,100,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1773,'HODREMLIN','Hodremlin','Hodremlin',61,12180,0,6782,2022,1,845,1678,29,25,80,41,81,56,62,11,10,12,1,6,67,0x95,140,960,528,432,0,0,0,0,0,0,0,0,587,1000,7340,1000,2406,2,938,1000,7563,1000,1061,2000,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1768,'GLOOMUNDERNIGHT','Gloom Under Night','Gloom Under Night',89,2298000,0,962175,276445,3,5880,9516,10,20,100,115,98,78,111,50,10,12,2,0,68,0x37B5,200,1344,2880,576,481087,10000,607,5500,617,5000,617,5000,7566,7000,7023,4000,7022,2000,616,5000,2513,1000,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1769,'AGAV','Agav','Agav',73,29620,0,9780,6622,1,103,1109,15,35,1,32,27,132,69,15,10,12,1,7,80,0x3085,300,768,360,360,0,0,0,0,0,0,0,0,7567,2500,2422,2,7563,4000,2109,1,12183,50,7563,100,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1770,'ECHIO','Echio','Echio',69,34900,0,13560,4300,1,750,1800,33,11,74,74,52,35,59,56,10,12,1,7,80,0x3085,250,768,360,360,0,0,0,0,0,0,0,0,7567,2500,608,10,7563,4000,5172,50,12183,20,7563,100,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1771,'VANBERK','Vanberk','Vanberk',59,9988,0,4203,901,1,230,660,24,6,69,66,39,29,51,41,10,12,1,7,80,0x3085,250,768,360,360,0,0,0,0,0,0,0,0,7568,2500,526,10,7563,1000,5172,10,0,0,7563,100,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1772,'ISILLA','Isilla','Isilla',62,8297,0,3001,3001,1,89,733,11,19,1,28,12,97,57,12,10,12,1,7,80,0x3085,300,768,360,432,0,0,0,0,0,0,0,0,7568,2500,2422,1,7563,1000,2610,10,2601,1,7563,100,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1773,'HODREMLIN','Hodremlin','Hodremlin',61,12180,0,6782,2022,1,845,1678,29,25,80,41,81,56,62,11,10,12,1,6,67,0x195,140,960,528,432,0,0,0,0,0,0,0,0,587,1000,7340,1000,2406,2,938,1000,7563,1000,1061,2000,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1774,'SEEKER','Seeker','Seeker',65,10090,0,5671,4278,6,723,852,17,30,60,52,34,143,107,27,10,12,0,0,64,0x95,190,576,432,300,0,0,0,0,0,0,0,0,587,1000,7340,1000,985,20,1061,4000,7563,1000,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1775,'SNOWIER','Snowier','Snowier',60,19230,0,5882,2699,2,770,1347,22,12,73,46,72,15,52,25,10,12,2,0,41,0x85,220,936,1020,420,0,0,0,0,0,0,0,0,7561,3000,7066,1000,757,100,510,50,509,500,0,0,991,100,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1776,'SIROMA','Siroma','Siroma',42,6800,0,2230,1005,1,220,440,12,8,33,23,52,11,40,19,10,12,0,0,61,0x83,180,432,648,240,0,0,0,0,0,0,0,0,7561,1000,7066,500,510,10,0,0,0,0,0,0,991,20,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1777,'ICE_TITAN','Ice Titan','Ice Titan',60,38200,0,13872,7928,1,1090,1570,71,15,99,34,88,10,79,29,10,12,2,0,61,0x85,250,861,660,144,0,0,0,0,0,0,0,0,7561,5000,7066,3000,749,100,984,10,985,30,0,0,995,100,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1778,'GAZETI','Gazeti','Gazeti',55,12300,0,5758,2075,10,512,612,65,25,1,12,20,60,101,5,10,12,1,6,21,0x85,190,576,370,270,0,0,0,0,0,0,0,0,7561,3000,7066,3000,985,20,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1779,'KTULLANUX','Ktullanux','Ktullanux',98,4417000,0,2720050,1120020,3,1680,10360,40,42,85,126,82,125,177,112,10,12,2,2,81,0xA5,400,432,840,216,1360025,10000,607,5500,617,5000,617,5000,7562,9000,616,3000,2509,5000,2111,5000,617,5000,607,5000,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1779,'KTULLANUX','Ktullanux','Ktullanux',98,4417000,0,2720050,1120020,3,1680,10360,40,42,85,126,82,125,177,112,10,12,2,2,81,0x37B5,400,432,840,216,1360025,10000,607,5500,617,5000,617,5000,7562,9000,616,3000,2509,5000,2111,5000,617,5000,607,5000,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1780,'MUSCIPULAR','Muscipular','Muscipular',57,4332,0,1706,1706,3,521,726,12,12,1,53,39,25,92,51,10,12,1,3,22,0x84,2000,672,648,360,0,0,0,0,0,0,0,0,7565,3000,1032,3000,629,2,1033,2000,905,1000,631,3,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1781,'DROSERA','Drosera','Drosera',46,7221,0,2612,1022,7,389,589,10,13,1,30,27,17,76,41,10,12,1,3,22,0x84,2000,864,576,336,0,0,0,0,0,0,0,0,7565,3000,938,3000,1032,3000,1033,2000,621,3,905,1000,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1782,'ROWEEN','Roween','Roween',31,5716,0,1669,1266,1,298,377,0,7,51,39,48,18,67,19,10,12,1,2,24,0x85,200,412,840,300,0,0,0,0,0,0,0,0,7564,3000,919,3000,992,50,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1783,'GALION','Galion','Galion',44,32240,0,10020,3368,1,336,441,11,12,51,52,59,25,72,32,10,12,1,2,44,0xA5,150,864,624,360,0,0,0,0,0,0,0,0,7564,3000,919,3000,996,10,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1784,'STAPO','Stapo','Stapo',23,666,0,332,221,1,135,370,90,5,12,11,15,12,23,1,10,12,0,0,42,0x83,300,936,792,432,0,0,0,0,0,0,0,0,909,1000,7312,1000,512,1000,7126,100,993,10,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1785,'ATROCE','Atros','Atros',82,1008420,0,295550,118895,2,2526,3646,25,25,100,87,56,49,89,72,10,12,2,2,67,0xA5,150,576,600,240,147775,10000,607,5500,617,5000,617,5000,7563,7000,608,1000,2621,1000,617,5000,607,5000,5123,100,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1786,'G_AGAV','Agav','Agav',73,25620,0,0,0,1,103,909,15,35,1,32,27,132,69,15,10,12,1,7,40,0x85,300,768,360,360,0,0,0,0,0,0,0,0,7567,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1787,'G_ECHIO','Echio','Echio',69,36900,0,0,0,1,750,1500,33,11,74,74,52,35,59,56,10,12,1,7,40,0x85,250,768,360,360,0,0,0,0,0,0,0,0,7567,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1785,'ATROCE','Atros','Atros',82,1008420,0,295550,118895,2,2526,3646,25,25,100,87,56,49,89,72,10,12,2,2,67,0x37B5,150,576,600,240,147775,10000,607,5500,617,5000,617,5000,7563,7000,608,1000,2621,1000,617,5000,607,5000,5123,100,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1786,'G_AGAV','Agav','Agav',73,25620,0,0,0,1,103,909,15,35,1,32,27,132,69,15,10,12,1,7,40,0x3085,300,768,360,360,0,0,0,0,0,0,0,0,7567,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1787,'G_ECHIO','Echio','Echio',69,36900,0,0,0,1,750,1500,33,11,74,74,52,35,59,56,10,12,1,7,40,0x3085,250,768,360,360,0,0,0,0,0,0,0,0,7567,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1788,'G_ICE_TITAN','Ice Titan','Ice Titan',60,32900,0,0,0,1,1090,1570,71,15,99,34,88,10,79,29,10,12,2,0,61,0x85,250,861,660,144,0,0,0,0,0,0,0,0,7561,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1789,'ICEICLE','Iceicle','Iceicle',38,10,0,5,5,3,241,1082,0,10,1,10,10,10,172,5,10,12,0,0,41,0x84,2000,1344,0,0,0,0,0,0,0,0,0,0,7066,1000,7066,1000,7066,1000,7066,500,7066,500,7066,500,7066,500,7066,500,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1790,'G_RAFFLESIA','Rafflesia','Rafflesia',17,1333,0,0,0,3,105,127,0,2,1,18,24,11,37,10,10,12,0,3,22,0x85,150,512,528,240,0,0,0,0,0,0,0,0,7577,3000,7575,4000,7576,2000,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
@@ -880,8 +880,8 @@ REPLACE INTO `mob_db` VALUES (1792,'SOCCER_BALL','Soccer Ball','Soccer Ball',1,1
 REPLACE INTO `mob_db` VALUES (1793,'G_MEGALITH','Megalith','Megalith',45,5300,0,0,0,9,264,314,50,25,1,45,60,5,95,5,10,12,2,0,80,0x84,200,1332,1332,672,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1794,'G_ROWEEN','Roween','Roween',31,5716,0,0,0,1,298,377,0,7,51,39,48,18,67,19,10,12,1,2,24,0x85,200,412,840,300,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1795,'BLOODY_KNIGHT_','Bloody Knight','Bloody Knight',82,800000,0,0,0,3,10000,30000,60,60,88,121,100,100,125,55,10,12,2,8,28,0x4B5,250,828,528,192,0,0,0,0,0,0,0,0,1417,100,2412,100,2514,200,2342,300,2513,200,1620,200,617,7000,7578,10000,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1796,'AUNOE','Aunoe','Aunoe',62,21297,0,4102,4102,1,89,733,11,19,1,28,12,97,57,12,10,12,1,7,80,0x83,250,768,432,360,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
-REPLACE INTO `mob_db` VALUES (1797,'FANAT','Fanat','Fanat',62,21297,0,4102,4102,1,89,733,11,19,1,28,12,97,57,12,10,12,1,7,80,0x83,250,768,432,360,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1796,'AUNOE','Aunoe','Aunoe',62,21297,0,4102,4102,1,89,733,11,19,1,28,12,97,57,12,10,12,1,7,80,0x3085,250,768,432,360,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
+REPLACE INTO `mob_db` VALUES (1797,'FANAT','Fanat','Fanat',62,21297,0,4102,4102,1,89,733,11,19,1,28,12,97,57,12,10,12,1,7,80,0x3085,250,768,432,360,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1798,'TREASURE_BOX_','Treasure Chest','Treasure Chest',99,0,0,0,0,0,0,0,0,0,0,0,0,0,255,0,0,0,0,0,20,0xA3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1799,'G_SEYREN_','Lord Knight Seyren','Lord Knight Seyren',99,347590,0,18000,10000,1,4238,5040,72,37,120,110,81,65,130,52,10,12,1,7,83,0xA3,100,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
 REPLACE INTO `mob_db` VALUES (1800,'G_EREMES_','Assassin Cross Eremes','Assassin Cross Eremes',99,211230,0,18000,10000,1,3189,5289,27,39,90,181,62,37,122,60,10,12,1,7,85,0xA3,100,76,384,288,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0);
